폴더 구조 추가,  alias 경로 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,12 @@
     "esModuleInterop": true,
     "baseUrl": "./",
     "paths": {
-      "@src/*": ["src/*"],     
+			"@Hooks/*": ["src/hooks/*"],
+      "@Components/*": ["src/components/*"],
+      "@Pages/*": ["src/pages/*"],
+      "@Store/*": ["src/store/*"],
+      "@Types/*": ["src/types/*"],
+      "@Api/*": ["src/api/*"]
     }
   }
 }
