new: nav레이아웃 일부 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
       "@Pages/*": ["src/pages/*"],
       "@Store/*": ["src/store/*"],
       "@Types/*": ["src/types/*"],
-      "@Api/*": ["src/api/*"]
+      "@Api/*": ["src/api/*"],
+      "@Styles/*": ["src/styles/*"]
     }
   }
 }
