--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@babel/preset-typescript": "^7.16.5",
-    "@mui/material": "^5.2.6",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.4.1",
+    "@mui/material": "^5.4.1",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.24.0",
     "css-loader": "^6.5.1",
